# vulkan_mac_deps

./: BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel
sdk/ios/: README.md  make-ios-framework.cosh
sdk/ios/MoltenVK.framework/_CodeSignature/: CodeResources
sdk/ios/good_old/MoltenVK.framework/: Info.plist
