cc_import(
    name = "libMoltenVK",
    shared_library = "sdk/macOS/lib/libMoltenVK.dylib",
)

cc_import(
    name = "libvulkan1",
    shared_library = "sdk/macOS/lib/libvulkan.1.dylib",
)

exports_files(["sdk/macOS/share"])

cc_library(
    name = "vulkan_mac_deps",
    data = [":sdk/macOS/share"],
    # Tell vulkan loader where to look for the manifest.
    # https://vulkan.lunarg.com/doc/view/1.3.239.0/mac/LoaderDriverInterface.html#user-content-driver-discovery-on-macos
    defines = [
        "SYSCONFDIR=$(rootpath :sdk/macOS/share)",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":libMoltenVK",
        ":libvulkan1",
    ],
)
